--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,6 +8,7 @@
   --color-session: #ffc076;
   --color-about: #58faff;
   --color-discover: #ff83ff;
+  --color-manage: #ffc076;
 
   --ff-body: 'Poppins', sans-serif;
   --ff-title: 'Oswald', sans-serif;
