--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -393,3 +393,22 @@ ul {
     }
   }
 }
+
+.apps-dashboard-container {
+  display: flex;
+  flex-wrap: wrap;
+
+  .app-button-container {
+    margin: 20px;
+    text-align: center;
+    .app-icon {
+      height: 200px;
+      width: 200px;
+      border-radius: 30px;
+      background-color: #ff83ff;
+    }
+    #athlete-app {
+      background-color: #bea37c;
+    }
+  }
+}
