--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -44,6 +44,7 @@ img {
   padding: 6em 0;
   text-align: center;
   margin-inline: auto;
+  position: relative;
 
   h1 {
     font-size: 3.5rem;
@@ -407,6 +408,140 @@ img {
 
     &:hover {
       background-color: var(--color-athletes-frontend);
+    }
+  }
+}
+
+.apps-dashboard-container {
+  width: 90%;
+  max-width: 600px;
+  margin-inline: auto;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 2em;
+
+  @media (min-width: 600px) {
+    justify-content: space-between;
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  > * {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 250px;
+    height: 250px;
+    border: 3px solid #000;
+    border-radius: 30px;
+    margin-bottom: 50px;
+    color: #000;
+    transition: background-color 0.3s linear;
+
+    &.articles {
+      background-color: var(--color-discover);
+    }
+
+    &.sessions {
+      background-color: var(--color-session);
+    }
+
+    &.athletes {
+      background-color: var(--color-athletes-data);
+    }
+
+    &.users {
+      background-color: var(--color-about);
+    }
+
+    h4 {
+      text-transform: uppercase;
+      font-size: 2rem;
+      text-decoration: none;
+      transition: all 0.3s linear;
+    }
+
+    &:hover {
+      color: #fff;
+      border-color: #fff;
+    }
+  }
+}
+
+.new-article {
+  position: absolute;
+  top: 50px;
+  right: 20%;
+  color: #000;
+  text-decoration: none;
+  font-size: 2rem;
+}
+
+.table-and-controller {
+  margin: 20px;
+  text-align: center;
+
+  ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    margin-bottom: 2em;
+
+    > * + * {
+      margin-left: 30px;
+    }
+
+    a {
+      color: #000;
+      text-decoration: none;
+      transition: color 0.3s linear;
+
+      &:hover {
+        color: #ff5064;
+      }
+    }
+  }
+
+  .table-controller {
+    margin-top: 10px;
+    text-align: center;
+  }
+
+  .table {
+    margin-top: 20px;
+  }
+  .button {
+    padding: 5px;
+    width: 100px;
+    background-color: var(--color-discover);
+    border: none;
+    margin: 10px;
+  }
+
+  .table-card {
+    display: flex;
+    justify-content: space-around;
+    border: #000 solid 1px;
+    padding: 10px;
+    align-items: center;
+
+    h1 {
+      font-size: 30px;
+    }
+
+    button {
+      padding: 5px;
+      width: 100px;
+      border-radius: 50px;
+      background-color: var(--color-discover);
+      border: none;
+    }
+    .table-item {
+      padding: 10px;
     }
   }
 }
