--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -180,6 +180,13 @@ img {
       background-color: var(--color-session);
     }
   }
+  &.athletes-data {
+    background-color: var(--color-athletes-data);
+
+    .main-navigation {
+      background-color: var(--color-athletes-data);
+    }
+  }
 }
 
 .logo {
@@ -369,7 +376,6 @@ img {
   }
 }
 
-
 .form {
   background-color: var(--color-home);
   border: 3px solid #000;
@@ -390,6 +396,7 @@ img {
     font-size: 1.5rem;
   }
 
+  select,
   input,
   textarea {
     font-family: inherit;
@@ -407,7 +414,8 @@ img {
     background-color: inherit;
     border: 0.2em solid #000;
     outline: none;
-
+    padding: 20px;
+    font-size: 20px;
     &:hover {
       background-color: var(--color-athletes-frontend);
     }
@@ -481,47 +489,202 @@ img {
   font-size: 2rem;
 }
 
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  margin-bottom: 2em;
 
-
-  ul {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.5rem;
-    margin-bottom: 2em;
-
-    > * + * {
-      margin-left: 30px;
-    }
-
-    a {
-      color: #000;
-      text-decoration: none;
-      transition: color 0.3s linear;
-
-      &:hover {
-        color: #ff5064;
-      }
-    }
+  > * + * {
+    margin-left: 30px;
   }
 
-.apps-dashboard-container {
-  display: flex;
-  flex-wrap: wrap;
+  a {
+    color: #000;
+    text-decoration: none;
+    transition: color 0.3s linear;
 
-  .app-button-container {
-    margin: 20px;
-    text-align: center;
-    .app-icon {
-      height: 200px;
-      width: 200px;
-      border-radius: 30px;
-      background-color: #ff83ff;
-    }
-    #athlete-app {
-      background-color: #bea37c;
+    &:hover {
+      color: #ff5064;
     }
   }
 }
 
+.table-and-controller {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 40px 100px;
+
+  .table-title {
+    margin: 50px 0px 10px 0px;
+    font-size: 50px;
+  }
+
+  .table-controller {
+    width: 80%;
+    padding: 10px 30px;
+    background-color: #ffc076;
+    margin: 30px 0px 10px 0px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .table {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    border: #ffc076 solid 30px;
+    margin: 20px;
+    width: 80%;
+    .table-card {
+      background-color: white;
+      margin-top: -3px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+      border: black solid 3px;
+      padding: 20px;
+    }
+
+    .table-combined-items {
+      display: flex;
+      flex-wrap: wrap;
+      width: 40%;
+      h1 {
+        margin: 4px;
+      }
+    }
+
+    .table-button {
+      background-color: #ffc076;
+      border-radius: 20px;
+      border: none;
+      padding: 3px 30px;
+      margin-top: 15px;
+      margin-right: 30psx;
+      text-decoration: none;
+      color: black;
+
+      &:hover {
+        background-color: black;
+        color: white;
+      }
+    }
+  }
+}
+.athlete-profile-page {
+  background-color: rgb(235, 235, 235);
+  margin: 100px;
+  .athleteProfile {
+    .profile-header {
+      padding: 10px;
+      background-color: #ffc076;
+      display: flex;
+      flex-direction: row-reverse;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+
+      .athlete-controller {
+        display: flex;
+        flex-wrap: wrap;
+      }
+    }
+  }
+}
+
+.center-object {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+}
+.hero {
+  color: white;
+  text-align: center;
+  padding: 250px 0px;
+  width: 100%;
+  background-image: url('https://images.unsplash.com/photo-1517649763962-0c623066013b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+  background-size: cover;
+  background-position: 100;
+}
+.section-is-half {
+  margin: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  .is-one-third {
+    width: 33.33%;
+    min-width: 300px;
+    .content {
+      margin: 10px;
+      padding: 20px;
+      height: 100%;
+      background-color: white;
+    }
+  }
+  .is-two-thirds {
+    width: 66.66%;
+    min-width: 300px;
+    .content {
+      margin: 10px;
+      padding: 20px;
+      height: 100%;
+      background-color: white;
+    }
+  }
+  .is-half {
+    width: 50%;
+    min-width: 500;
+    .content {
+      margin: 10px;
+      padding: 50px;
+      height: 100%;
+      background-color: white;
+    }
+  }
+}
+.button {
+  text-align: center;
+  background-color: white;
+  margin: 10px;
+  min-width: 260px;
+  border: black solid 5px;
+  padding: 5px 15px;
+  text-decoration: none;
+  color: black;
+  font-size: 30px;
+  font-family: var(--ff-title);
+
+  &:hover {
+    color: white;
+    background-color: black;
+  }
+}
+
+.home-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #eeeeee;
+}
+
+.feature-card {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  width: 30%;
+  margin: 10px;
+  padding: 40px;
+  ul {
+    display: block;
+    li {
+      text-align: center;
+      font-size: 20px;
+    }
+  }
+}
